--- a/src/App.css
+++ b/src/App.css
@@ -32,12 +32,14 @@
     top: 40%;
     left: 50%;
     transform: translate(-50%, -50%);
+    text-align: center;
 }
 .heading-primary{
     color: #fff;
     text-transform: uppercase;
 
     backface-visibility: hidden;
+    margin-bottom: 60px;
 }
 .heading-primary-main{
     display: block;
@@ -86,4 +88,30 @@
         opacity: 1;
         transform: translateX(0);
     }
+}
+
+.btn{
+    text-transform: uppercase;
+    padding: 15px 40px;
+    display: inline-block;
+    text-decoration: none;
+    border: none;
+    border-radius: 100px;
+    cursor: pointer;
+    transition: all .2s;
+}
+
+.btn:hover{
+    transform: translateY(-3px);
+    box-shadow: 0 10px 20px rgba(0,0,0,0.2);
+}
+
+.btn:active{
+    transform: translateY(-1px);
+    box-shadow: 0 5px 10px rgba(0,0,0,0.2);
+}
+
+.btn-white{
+    background-color: #fff;
+    color: #777;
 }
